# downmixer

./: .gitignore  404.html  Pipfile  README.md  gen_pages.py  index.html  library.py  logo.ai  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup_logging.py
.github/workflows/: ci.yml
cli/: index.html
docs/: cli.md  index.md  references.md
docs/stylesheets/: extra.css
downloader/: convert.py  tagging.py
file_tools/: __init__.py  convert.py  tagging.py  utils.py
matching/: __init__.py  utils.py
providers/: __init__.py  index.html
providers/audio/: youtube_music.py
providers/library.py file/: index.html
providers/lyrics/: azlyrics.py
reference/file_tools/: index.html
reference/file_tools/convert/: index.html
reference/file_tools/tag/: index.html
reference/file_tools/utils/: index.html
reference/log/: index.html
reference/matching/: index.html
reference/matching/utils/: index.html
reference/processing/: index.html
reference/providers/: index.html
reference/providers/audio/: index.html
reference/providers/audio/youtube_music/: index.html
reference/providers/info/: index.html
reference/providers/info/spotify/: index.html
reference/providers/info/spotify/utils/: index.html
reference/providers/lyrics/: index.html
reference/providers/lyrics/azlyrics/: index.html
reference/utils/: index.html
references/: index.html
search/: search_index.json
spotify/: __init__.py  client.py  downloader.py
src/downmixer/: __init__.py  __main__.py  library.py  main.py  setup_logging.py
src/downmixer/file_tools/: __init__.py  convert.py  tag.py  tagging.py
src/downmixer/log/: __init__.py
src/downmixer/matching/: __init__.py
src/downmixer/processing/: __init__.py
src/downmixer/providers/: __init__.py
src/downmixer/providers/audio/: __init__.py  youtube_music.py
src/downmixer/providers/info/: __init__.py
src/downmixer/providers/info/spotify/: __init__.py  utils.py
src/downmixer/providers/lyrics/: azlyrics.py
src/downmixer/spotify/: __init__.py  client.py  utils.py
