[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downmixer"
version = "0.0.2"
authors = [
    { name = "Anna Rodrigues", email = "anna.roliveira@proton.me" },
]
description = "Synchronize your Spotify library locally!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/androidWG/downmixer"
"Documentation" = "https://androidwg.github.io/downmixer"
"Bug Tracker" = "https://github.com/androidWG/downmixer/issues"

[project.scripts]
downmixer = "downmixer:command_line"
