[project]
name = "downmixer"
version = "0.0.2a"
description = "Synchronize streaming libraries easily!"
authors = [{ name = "androidWG", email = "me@annarodrigues.net" }]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "pytube",
    "rapidfuzz",
    "ytmusicapi",
    "python-slugify",
    "spotipy",
    "yt-dlp",
    "python-ffmpeg",
    "mutagen",
    "requests==2.32.0",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/androidWG/downmixer"
Documentation = "https://androidWG.github.io/downmixer"
"Bug Tracker" = "https://github.com/androidWG/downmixer/issues"

[project.scripts]
downmixer = "downmixer:command_line"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black==24.3.0",
    "build",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-awesome-pages-plugin",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
